After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 686893 - When search field is open in one tab, path in other tabs is reset to ~ (Home)
When search field is open in one tab, path in other tabs is reset to ~ (Home)
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: File Search Interface
3.6.x
Other Linux
: Normal major
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
: 687023 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2012-10-25 21:06 UTC by Stefan Knorr
Modified: 2012-10-29 21:06 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Stefan Knorr 2012-10-25 21:06:09 UTC
Steps to reproduce:

#1 Open Nautilus
#2 Navigate to "Documents" folder (or for that matter, any other that is not your ~)
#3 Open new tab (press Ctrl-C)
#4 Type "abc"
(Nautilus now searches inside the chosen folder)
#5 Switch to the first tab again

Result: Notice that Nautilus's path bar has jumped back to Home (~).
This always happens when both tabs point at the same path, if the paths are different, the problem seems gone.

(Nautilus 3.6.0 on OpenSUSE 12.2)
Comment 1 Cosimo Cecchi 2012-10-26 21:47:05 UTC
Thanks for the report, I now pushed a fix to git.
Comment 2 Cosimo Cecchi 2012-10-29 11:54:44 UTC
*** Bug 687023 has been marked as a duplicate of this bug. ***
Comment 3 Stefan Knorr 2012-10-29 21:06:02 UTC
Thanks, Cosimo!

[Also, for posterity, the accelerator for New Tab is Ctrl-T, of course.]